SOC-2814 | Spaces Administration - Remove Hello World portlet, fix bug permission list is not persisted and remove whitespace when do not display Add new space button

--- a/webapp/juzu-portlet/src/main/webapp/css/space-management/space-management.less
+++ b/webapp/juzu-portlet/src/main/webapp/css/space-management/space-management.less
@@ -4,8 +4,6 @@
   padding: 8px 14px 14px;
   background: #fff;
   zoom: 100%;
-  width: 600px;
-  margin: auto;
 }
 
 li {
